Use method references for forwarding lambdas and small cleanups
Replace lambdas that only forward to one method with method references.
Drop MultiMeth.get in favour of RC.get(..).rcs(), compute the declared
name strings once in DeclaredNames, use List.getLast, drop a redundant
qualified name and a stray semicolon.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>